--- a/employee-management-springboot/employee-management-springboot/src/main/resources/application.properties
+++ b/employee-management-springboot/employee-management-springboot/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+#Hibernate
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management?useSSL=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.generate-ddl=true
+
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
